--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -119,8 +119,8 @@ jobs:
             libtool cmake ninja-build ccache \
             wget curl file \
             libc6-dev libc6-dev-i386 \
-            lib32stdc++6 lib32z1 lib32ncurses5 \
-            lib32bz2-1.0 lib32gcc-s1 lib32tinfo6 \
+            lib32stdc++6 lib32z1 \
+            lib32gcc-s1 lib32tinfo6 \
             libc6-dev-armhf-cross gcc-arm-linux-gnueabihf \
             g++-arm-linux-gnueabihf \
             libc6-dev-arm64-cross gcc-aarch64-linux-gnu \
